--- a/base/miwinb/Makefile
+++ b/base/miwinb/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	miwinb
-PORTVERSION=	0.6
+PORTVERSION=	0.7
 CATEGORIES=	base misc
 
 MAINTAINER=	miwi@FreeBSD.org
@@ -30,11 +30,6 @@ RUN_DEPENDS+=	xorg>0:x11/xorg \
 		/boot/modules/i915kms.ko:graphics/drm-current-kmod\
 		slim:x11/slim \
 		htop:sysutils/htop \
-		${LOCALBASE}/share/fonts/webfonts/arial.ttf:x11-fonts/webfonts \
-		${LOCALBASE}/share/fonts/bitstream-vera/VeraBd.ttf:x11-fonts/bitstream-vera \
-		${LOCALBASE}/share/fonts/ChromeOS/Cousine-BoldItalic.ttf:x11-fonts/croscorefonts-fonts-ttf \
-		${LOCALBASE}/share/fonts/terminus-font/ter-112b.pcf.gz:x11-fonts/terminus-font \
-		${LOCALBASE}/share/fonts/TerminusTTF/TerminusTTF-4.46.0.ttf:x11-fonts/terminus-ttf \
 		${LOCALBASE}/share/fonts/powerline-fonts/SpaceMono-Bold.ttf:x11-fonts/powerline-fonts \
 		i3:x11-wm/i3 \
 		i3lock:x11/i3lock \
@@ -46,7 +41,9 @@ RUN_DEPENDS+=	xorg>0:x11/xorg \
 		wifimgr:net-mgmt/wifimgr \
 		powermon:sysutils/powermon \
 		powerdxx:sysutils/powerdxx \
-		xautolock:x11/xautolock
+		xautolock:x11/xautolock \
+		py3status:deskutils/py-py3status \
+		networkmgr:net-mgmt/networkmgr
 
 
 
