--- a/base/miwinb/Makefile
+++ b/base/miwinb/Makefile
@@ -2,13 +2,13 @@
 # $FreeBSD$
 
 PORTNAME=	miwinb
-PORTVERSION=	0.10
+PORTVERSION=	0.11
 CATEGORIES=	base misc
 
 MAINTAINER=	miwi@FreeBSD.org
 COMMENT=	Desktop Port
 
-RUN_DEPENDS+=	X:x11/xorg-minimal \
+RUN_DEPENDS+=	X:x11/xorg \
 		urxvt:x11/rxvt-unicode \
 		urxvt:x11/urxvt-perls \
 		vim:editors/vim-console \
